src/objects/Truckers_Fuel_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account who owns the fuel card</description>
        <inlineHelpText>The account who owns the fuel card</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truckers Fuel Cards</relationshipLabel>
        <relationshipName>Truckers_Fuel_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fuel Card Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Vendor__c</fullName>
        <description>The vendor who owns the fuel account</description>
        <inlineHelpText>The vendor who owns the fuel account</inlineHelpText>
        <label>Fuel Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comdata</fullName>
                </value>
                <value>
                    <fullName>EFS</fullName>
                </value>
                <value>
                    <fullName>FleetOne</fullName>
                </value>
                <value>
                    <fullName>T-Chek</fullName>
                </value>
                <value>
                    <fullName>Old EFS</fullName>
                </value>
                <value>
                    <fullName>FleetOne EDGE</fullName>
                </value>
                <value>
                    <fullName>EFS EDGE</fullName>
                </value>
                <value>
                    <fullName>FTS EDGE</fullName>
                </value>
                <value>
                    <fullName>WEX EDGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>Is the fuel card active currently?</description>
        <formula>IF(OR(ISNULL(End_Date__c),End_Date__c &lt; TODAY()), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the fuel card active currently?</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFJ_Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PFJ Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFJ_Denied_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PFJ Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFJ_Tier__c</fullName>
        <label>PFJ Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_To_PFJ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send To PFJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_TA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send To TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Denied_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TA Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Tier__c</fullName>
        <label>TA Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>